Closed Bug 170772 Opened 23 years ago Closed 23 years ago

Sheets remain visible as separate windows after retracting

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
Chimera0.6

People

(Reporter: jcox, Assigned: mikepinkerton)

Details

Attachments

(1 file)

On build 2002092504, sheets for authentication and notification have been remaining on visible as separate windows below the Chimera window that invoked them after they are retracted. They cannot be given focus and do not respond to button clicks through any method I've found. They disappear when the application is hidden, and return when the application is unhidden. They disappear and do not return after Chimera is quit and relaunched. The problem is reproducible on Mac OS X 10.2.1.
I'm seeing this in my builds too; confirm
Status: UNCONFIRMED → NEW
Ever confirmed: true
mine, i have a fix (thanks to smfr's flash of brilliance)
Assignee: brade → pinkerton
Severity: normal → critical
Target Milestone: --- → Chimera0.6
fixed. thank god.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Using todays build (2002-09-26-04), this problem is no longer occuring. Tested with 10.2.1.
Marking verified in the 2002-09-26-05 NB.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: