Fix issue with alerts coming back as unattached sheet windows. Somehow they were set to be utility windows, so i think an activate was causing them to reappear after being hidden (they're not destroyed on close). Also remove an unused outlet from 2 confirm alerts. (bug 170772)